homework exercises completed

--- a/week-3/Homework/D-slideshow/index.html
+++ b/week-3/Homework/D-slideshow/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Slideshow</title>
-    <script src="slideshow.js"></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -12,6 +11,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Write your HTML in here -->
+    <div class="container">
+      <div id="frame"></div>
+      <button id="playBack"><h3>◀</h3></button>
+      <button id="goBack"><h3>◁</h3></button>
+      <button id="stop"><h3>☒</h3></button>
+      <button id="forward"><h3>▷</h3></button>
+      <button id="play"><h3>▶</h3></button>
+    </div>
+    <script src="slideshow.js"></script>
   </body>
 </html>
